records/raw/2026-06-28/k3s-kata-134-networkpolicy/blocked-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"name":"blocked","namespace":"np-kata-1782661004"},"spec":{"containers":[{"command":["/bin/sh","-c","sleep 365d"],"image":"curlimages/curl:8.8.0","name":"curl"}],"runtimeClassName":"kata"}}
  creationTimestamp: "2026-06-28T15:36:47Z"
  generation: 1
  name: blocked
  namespace: np-kata-1782661004
  resourceVersion: "182461"
  uid: 2c72f651-5672-4365-b1ed-6fead8270f35
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - sleep 365d
    image: curlimages/curl:8.8.0
    imagePullPolicy: IfNotPresent
    name: curl
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-rp4rq
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: worker-1
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  runtimeClassName: kata
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-rp4rq
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2026-06-28T15:36:51Z"
    observedGeneration: 1
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2026-06-28T15:36:47Z"
    observedGeneration: 1
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2026-06-28T15:36:51Z"
    observedGeneration: 1
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2026-06-28T15:36:51Z"
    observedGeneration: 1
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2026-06-28T15:36:47Z"
    observedGeneration: 1
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: cri-o://45b4354cf69d41dcf78c83018e000b00704ad2f18f2f614a2cb4dc1197ae4b4e
    image: docker.io/curlimages/curl:8.8.0
    imageID: docker.io/curlimages/curl@sha256:73e4d532ea62d7505c5865b517d3704966ffe916609bedc22af6833dc9969bcd
    lastState: {}
    name: curl
    ready: true
    resources: {}
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2026-06-28T15:36:51Z"
    user:
      linux:
        gid: 101
        supplementalGroups:
        - 101
        uid: 100
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-rp4rq
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 10.180.0.6
  hostIPs:
  - ip: 10.180.0.6
  observedGeneration: 1
  phase: Running
  podIP: 10.80.3.17
  podIPs:
  - ip: 10.80.3.17
  qosClass: BestEffort
  startTime: "2026-06-28T15:36:47Z"
