records/raw/2026-06-28/k3s-kata-134-networkpolicy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-only-labeled","namespace":"np-kata-1782661004"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"access":"allowed"}}}]}],"podSelector":{"matchLabels":{"app":"server"}},"policyTypes":["Ingress"]}}
  creationTimestamp: "2026-06-28T15:36:56Z"
  generation: 1
  name: allow-only-labeled
  namespace: np-kata-1782661004
  resourceVersion: "182471"
  uid: d4da87ac-694c-4c67-bf80-e42af5065ec4
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: allowed
  podSelector:
    matchLabels:
      app: server
  policyTypes:
  - Ingress
