records/raw/2026-06-28/k3s-kata-134-networkpolicy/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"server","namespace":"np-kata-1782661004"},"spec":{"ports":[{"port":80,"targetPort":5678}],"selector":{"app":"server"}}}
  creationTimestamp: "2026-06-28T15:36:46Z"
  name: server
  namespace: np-kata-1782661004
  resourceVersion: "182435"
  uid: f4453756-0e98-46cb-90dd-a47a07f03ba4
spec:
  clusterIP: 10.81.149.57
  clusterIPs:
  - 10.81.149.57
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    app: server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
